testing/Travis/testcases/TypeChecker/shouldPass/RelationalAddition.adl
CONTEXT RelationalAdditionTypeCheck IN ENGLISH

PURPOSE CONTEXT RelationalAdditionTypeCheck
{+ This test must succeed because there is an exact match on B. +}

RELATION r[A*B]
RELATION s[B*C]
RELATION result[A*C]

RULE testRelationalAddition: result = r!s

ENDCONTEXT
